--- a/VoteVoteServer/src/main/webapp/bower.json
+++ b/VoteVoteServer/src/main/webapp/bower.json
@@ -17,18 +17,16 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "~1.2.0",
-    "angular-route": "~1.2.0",
-    "angular-loader": "~1.2.0",
-    "angular-mocks": "~1.2.0",
+    "angular": "~1.4.x",
+    "angular-route": "~1.4.x",
+    "angular-loader": "~1.4.x",
+    "angular-mocks": "~1.4.x",
+    "angular-animate": "^1.4.x",
+    "angular-aria": "^1.4.x",
+    "angular-i18n": "~1.4.x",
+
+    "angular-material": "^0.9.0",
     "angular-translate": "~2.5.2",
-    "angular-spinner": "~0.6.1",
-    "angular-dragdrop": "~1.0.5",
-    "angular-i18n": "~1.4.0",
-    "angular-bootstrap": "~0.12.0",
-    "bootstrap": "~3.2.0",
-    "jquery-ui": "~1.11.0",
-    "jquery-ui-i18": "~1.11.0",
-    "spin-js": "~2.0.1"
+    "angular-spinner": "~0.6.1"
   }
 }
